@@ -1,6 +1,9 @@
 This file lists all changes made to the game driver in all glory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+15-Apr-2009 (Gnomi)
+  - (pkg-gnutls.c) Support for older versions of libgnutls.
+
 14-Apr-2009 (Gnomi)
   - (doc/driver/predefined) Corrected description of __PATH__(n).
   - (mk-patchlevel.h) Call version.sh in the current directory.
